# repo-tickets

./: .gitignore  AGENT_API.md  AGENT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCS_INDEX.md  EPICS.md  FAST_TRACK.md  IMPLEMENTATION_PLAN.md  KEYBOARD_SHORTCUTS.md  LICENSE  MANIFEST.in  OPTIMIZATION_OPPORTUNITIES.md  PROGRESS.md  PUBLISH_TO_PYPI.md  README.md  RELEASE_CHECKLIST.md  RELEASE_COMPLETE.md  RELEASE_NOTES_v1.0.0.md  REPORTING.md  REQUIREMENTS.md  STATUS.md  TUI_GUIDE.md  TUI_SUMMARY.md  USAGE.md  USAGE_GUIDE.md  WARP.md  WORKFLOWS.md  create_demo.py  demo.sh  demo_tui.py  journal_demo.sh  pyproject.toml  report_demo.sh  requirements.txt  setup.py  test_epics_backlog.py  test_requirements.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: README.md  agent_workflow.sh  async_agents_example.py  batch_example.py  bulk_operations.py  event_automation.py  logging_example.py  monitoring.sh
repo_tickets/: __init__.py  agent_learning.py  agents.py  async_agents.py  batch.py  cli.py  events.py  logging_utils.py  metrics.py  models.py  reports.py  schemas.py  storage.py  tui.py  vcs.py  workflows.py
